hack/test/example-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example
  labels:
    app: example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
    spec:
      containers:
      - name: httpecho
        image: hashicorp/http-echo
        args:
        - "-listen=:8080"
        - "-text=hello world"
        ports:
        - containerPort: 8080
