hack/test/example-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example
  annotations:
    kubernetes.io/ingress.class: caddy
spec:
  rules:
  - host: example1.MYDOMAIN.TDL
    http:
      paths:
      - path: /hello2
        backend:
          serviceName: example2
          servicePort: 8080
      - path: /hello
        backend:
          serviceName: example
          servicePort: 8080
  - host: example2.MYDOMAIN.TDL
    http:
      paths:
      - path: /hello2
        backend:
          serviceName: example2
          servicePort: 8080
      - path: /hello1
        backend:
          serviceName: example
          servicePort: 8080
#   tls:
#   - secretName: ssl-example2.MYDOMAIN.TDL
#     hosts:
#     - example2.caddy.dev
