hack/test/example-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: example
spec:
  type: ClusterIP
  selector:
    app: example
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
